--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel": "^6.5.2",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
     "babelify": "^7.3.0",
     "browser-sync": "^2.10.1",
     "browserify": "^13.0.1",
